Fix layout issue on Homepage by adjusting margin on DateCards. Add README information.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -139,7 +139,7 @@ div#push-footer {
 }
 
 .date-list .date-card {
-  margin-left: 4%;
+  margin-left: 4.3%;
 }
 
 .date-list .date-card img {
